--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-VITE_BACKEND_URL="" 				# Provide a value for BACKEND_URL
+VITE_BACKEND_URL="" 				# Provide a value for VITE_BACKEND_URL
+VITE_NODE_ENV="" 				# Provide a value for VITE_NODE_ENV
